src/test/ui/stability-attribute/stability-attribute-collision-safe-user.stderr
error: an associated function with this name may be added to the standard library in the future
  --> $DIR/stability-attribute-collision-safe-user.rs:23:20
   |
LL |     assert_eq!('x'.safe(), 1);
   |                    ^^^^
   |
   = warning: once this associated item is added to the standard library, the ambiguity may cause an error or change in behavior!
   = note: for more information, see issue #48919 <https://github.com/rust-lang/rust/issues/48919>
   = help: call with fully qualified syntax `LocalTrait::safe(...)` to keep using the current method
   = help: add `#![feature(new_trait_feature)]` to the crate attributes to enable `safe`
note: the lint level is defined here
  --> $DIR/stability-attribute-collision-safe-user.rs:2:9
   |
LL | #![deny(unstable_name_collisions)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^

error: an associated function with this name may be added to the standard library in the future
  --> $DIR/stability-attribute-collision-safe-user.rs:32:20
   |
LL |     assert_eq!('x'.not_safe(), 1);
   |                    ^^^^^^^^
   |
   = warning: once this associated item is added to the standard library, the ambiguity may cause an error or change in behavior!
   = note: for more information, see issue #48919 <https://github.com/rust-lang/rust/issues/48919>
   = help: call with fully qualified syntax `LocalTrait::not_safe(...)` to keep using the current method
   = help: add `#![feature(new_trait_feature)]` to the crate attributes to enable `not_safe`

error: aborting due to 2 previous errors

